--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,11 +86,15 @@ img {
 	padding-bottom: 20px;
 	border-bottom: 2px solid #000;
 	font-size: 20px;
+	max-width: 100%;
+	overflow-x: auto;
 }
 
 .content-item-data span {
 	display: block;
 	padding-top: 10px;
+	max-width: 100%;
+	overflow-x: auto;
 }
 
 .content-item-data span:first-child, .f-bold {
